set(
        CONST_SOURCES
)

#add_library(
#        Const
#        SHARED
#        ${CONST_SOURCES}
#)
#add_library(
#        Anar::Const
#        ALIAS
#        Const
#)
#set_target_properties(
#        Const
#        PROPERTIES
#        VERSION ${SHARED_LIBRARY_VERSION} SOVERSION ${SHARED_LIBRARY_VERSION}
#        OUTPUT_NAME AnarConst
#        DEFINE_SYMBOL Const_EXPORTS
#)