set(
        EXCEPTION_SOURCES
)

#add_library(
#        Exception
#        SHARED
#        ${EXCEPTION_SOURCES}
#)
#add_library(
#        Anar::Exception
#        ALIAS
#        Exception
#)
#set_target_properties(
#        Exception
#        PROPERTIES
#        VERSION ${SHARED_LIBRARY_VERSION} SOVERSION ${SHARED_LIBRARY_VERSION}
#        OUTPUT_NAME AnarException
#        DEFINE_SYMBOL Exception_EXPORTS
#)