set(
        LOG_SOURCES
)

#add_library(
#        Log
#        SHARED
#        ${LOG_SOURCES}
#)
#add_library(
#        Anar::Log
#        ALIAS
#        Log
#)
#set_target_properties(
#        Log
#        PROPERTIES
#        VERSION ${SHARED_LIBRARY_VERSION} SOVERSION ${SHARED_LIBRARY_VERSION}
#        OUTPUT_NAME AnarLog
#        DEFINE_SYMBOL Log_EXPORTS
#)