set(
        MODEL_SOURCES
)

#add_library(
#        Model
#        SHARED
#        ${MODEL_SOURCES}
#)
#add_library(
#        Anar::Model
#        ALIAS
#        Model
#)
#set_target_properties(
#        Model
#        PROPERTIES
#        VERSION ${SHARED_LIBRARY_VERSION} SOVERSION ${SHARED_LIBRARY_VERSION}
#        OUTPUT_NAME AnarModel
#        DEFINE_SYMBOL Model_EXPORTS
#)