set(
        TASK_SOURCES
)

#add_library(
#        Task
#        SHARED
#        ${TASK_SOURCES}
#)
#add_library(
#        Anar::Task
#        ALIAS
#        Task
#)
#set_target_properties(
#        Task
#        PROPERTIES
#        VERSION ${SHARED_LIBRARY_VERSION} SOVERSION ${SHARED_LIBRARY_VERSION}
#        OUTPUT_NAME AnarTask
#        DEFINE_SYMBOL Task_EXPORTS
#)