find_package(Qt5 COMPONENTS Core Quick LinguistTools Sql REQUIRED)
set(SOURCES
   ${SOURCES}
   ${CMAKE_SOURCE_DIR}/src/model/settings/database.cpp
   ${CMAKE_SOURCE_DIR}/src/model/settings/alpr.cpp
   ${CMAKE_SOURCE_DIR}/src/model/settings/parking.cpp
   ${CMAKE_SOURCE_DIR}/src/model/settings/comport.cpp
   ${CMAKE_SOURCE_DIR}/src/model/settings/board.cpp
   ${CMAKE_SOURCE_DIR}/src/model/settings/server.cpp
   ${CMAKE_SOURCE_DIR}/src/model/settings/camera.cpp
   ${CMAKE_SOURCE_DIR}/src/model/settings/gate.cpp
   ${CMAKE_SOURCE_DIR}/src/model/settings/payment.cpp
   ${CMAKE_SOURCE_DIR}/src/model/settings/software.cpp
   ${CMAKE_SOURCE_DIR}/src/model/settings/card-reader.cpp
   ${CMAKE_SOURCE_DIR}/src/model/settings/settings.cpp
)
add_library(settings
   ${SOURCES}
   )
target_link_libraries(settings
  PRIVATE
 Qt5::Core
)
